# example_package

./: CMakeLists.txt  package.xml
config/: controllers.yaml  robot.rviz
description/: gazebo.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro  robot_core_2.xacro  ros2_control.xacro
launch/: gazebo_sim.launch.py  rsp.launch.py  rviz.launch.py
meshes/: arm.stl  robot_arm.stl  rot_base.stl
meshes/collision/: rot_base_collide.stl
