<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_package</name>
  <version>0.0.1</version>
  <description>A package created to test new things with a simple robot design</description>
  <maintainer email="ksementilli@hotmail.ca">kseme</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <build_depend>ros2_control</build_depend>
  <exec_depend>ros2_control</exec_depend>

  <build_depend>controller_manager</build_depend>
  <exec_depend>controller_manager</exec_depend>

  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>

